fix the language
fix the language

--- a/simple_car_store/assets/translations/ar.json
+++ b/simple_car_store/assets/translations/ar.json
@@ -1,8 +1,31 @@
 {
   "title": "الطريقة الاسهل للحصول على سيارة احلامك",
+  "get_started":"انطلق",
+  "splash_text": "انطلق بقوة وتميز اختر سيارتك المثالية الآن",
+  "login_head": "مرحبا",
+  "login_title":"بعودتك!",
+  "login_text": "قم بتسجيل الدخول للوصول إلى سجل مشترياتك والحصول على تحديثات فورية لطلبات سيارتك.",
+  "remember_me": "تذكرني ",
+  "forgot_password": "نسيت كلمة المرور",
+  "login": "تسجيل الدخول",
+  "google_sign_in": "التسجيل عبر جوجل",
+  "dont_have_account": "ليس لديك حساب ؟",
+  "create_account": "انشاء حساب",
+  "register_head": "اهلا بك",
+  "register_title":"cars store",
+  "register_text": "أنشئ حسابًا للوصول إلى سجل مشترياتك والحصول على تحديثات فورية لطلبات سيارتك.",
+  "email": "الايميل",
+  "password": "كلمة المرور",
+  "confirm_password": "تأكيد كلمة المرور",
+  "privacy_policy": "الموافقة على شروط الخدمة وسياسة الخصوصية",
+  "sign_up": "انشاء الحساب",
+  "have_account": "لديك حساب من قبل ؟",
   "show_more": "شاهد المزيد",
   "popular_car": "السيارات الشائعه",
   "search": "البحث",
+  "error": "قم بتعبئة حقل",
+  "error_title": "خطاء",
+  "error_real_email": "اكتب الايميل بشكل صحيح",
   "change_language":"تغير الغه",
   "logout": "تسجيل الخروج",
   "favorite": "المفضلة",
