--- a/simple_car_store/assets/translations/en.json
+++ b/simple_car_store/assets/translations/en.json
@@ -1,13 +1,35 @@
 {
   "title": "Easy way to buy your dream car",
+  "get_started":"Get Started",
+  "splash_text": "Drive with power and stand out – Choose your perfect car now!",
+  "login_head": "welcome",
+  "login_title":"Bac k !",
+  "login_text": "Sign in to access your purchase history and get real-time updates on your car orders",
+  "remember_me": "Remember me ",
+  "forgot_password": "Forgot Password",
+  "login": "login",
+  "google_sign_in": "Continue with google",
+  "dont_have_account": "Dont have account ?",
+  "create_account": "Create an Account",
+  "register_head": "H e llo",
+  "register_title":"cars store",
+  "register_text": "Create an account to access your purchase history and get real-time updates on your car orders",
+  "email": "email",
+  "password": "password",
+  "confirm_password": "confirm password",
+  "privacy_policy": "Agree to our Terms of Services and Privacy Policy",
+  "sign_up": "signup",
+  "have_account": "Already have account ?",
   "show_more": "Show more",
   "popular_car": "Popular car",
   "search": "Search",
+  "error": "please fill the",
+  "error_title": "Error",
+  "error_real_email": "write real email",
   "change_language": "change language",
   "favorite": "favorite",
   "categories": "categories",
   "setting": "setting",
   "about_app":"about app",
   "logout": "log out"
-
 }
