fix the language
fix the language

--- a/simple_car_store/assets/translations/ar.json
+++ b/simple_car_store/assets/translations/ar.json
@@ -24,6 +24,10 @@
   "popular_car": "السيارات الشائعه",
   "search": "البحث",
   "error": "قم بتعبئة حقل",
+  "invalid_credential": "الأيميل او كلمة المرور غير صحيح",
+  "check_password": "تحقق من مطابقة كلمة المرور",
+  "weak_password": "اكتب كلمة مرور قوية",
+  "email-already-in-use": "هذا الأيميل موجود بالفعل",
   "error_title": "خطاء",
   "error_real_email": "اكتب الايميل بشكل صحيح",
   "change_language":"تغير الغه",
