--- a/simple_car_store/assets/translations/en.json
+++ b/simple_car_store/assets/translations/en.json
@@ -14,7 +14,7 @@
   "register_head": "H e llo",
   "register_title":"cars store",
   "register_text": "Create an account to access your purchase history and get real-time updates on your car orders",
-  "email": "email",
+  "email": "Email",
   "password": "password",
   "confirm_password": "confirm password",
   "privacy_policy": "Agree to our Terms of Services and Privacy Policy",
@@ -24,6 +24,10 @@
   "popular_car": "Popular car",
   "search": "Search",
   "error": "please fill the",
+  "invalid_credential": "The email or password is incorrect. Please try again.",
+  "check_password": "check the password and confirm password",
+  "weak_password": "The password provided is too weak.",
+  "email-already-in-use": "The account already exists for that email.",
   "error_title": "Error",
   "error_real_email": "write real email",
   "change_language": "change language",
